--- a/cliente/src/assets/components/tabMenu/Solicitudes/SelectConsultorio/SelectHorario/resumenCita/resumenCita.css
+++ b/cliente/src/assets/components/tabMenu/Solicitudes/SelectConsultorio/SelectHorario/resumenCita/resumenCita.css
@@ -92,7 +92,7 @@
 }
 
 .info-value {
-  color: #34495e;
+  color: #34495e !important;
   font-size: 1rem;
   font-weight: 500;
   margin: 0.2rem 0 0;
