--- a/cliente/src/assets/components/tabMenu/tabMenu.css
+++ b/cliente/src/assets/components/tabMenu/tabMenu.css
@@ -70,8 +70,10 @@ body {
 */
 @media (min-width: 769px) {
   .tab-section {
-    max-width: 95%; /* Ahora puedes usar max-width para desktop */
+    max-width: 100%; /* Ahora puedes usar max-width para desktop */
     margin: 8vh auto;
+    max-height: 100%;
+    height: 100vh;
   }
 
   /* Permite que las pestañas crezcan para ocupar el espacio */
